# compass-challenge

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
main/: __init__.py
matching/: __init__.py
tests/: test_address_matching.py  test_email_matching.py  test_name_matching.py  test_zip_matching.py
